<resources>

    <string name="app_name">Quiz Me Now</string>
    <string name="package_name">com.walmin.android.quizmenow</string>
    <string name="devID">6020993160698769181</string>

    <!-- URLs -->
    <string name="sourceCodeURL">https://github.com/WALMIN/QuizMeNow</string>
    <string name="thumbnailURL">https://walmin.com/quiz/resources/thumbnails/%1$s.png</string>
    <string name="quizURL">https://opentdb.com/api.php?amount=10&amp;category=%1$s&amp;type=multiple</string>

    <!-- Fragments -->
    <string name="splash_fragment_label">Splash Fragment</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="stats_fragment_label">Stats Fragment</string>
    <string name="get_ready_fragment_label">Get Ready Fragment</string>
    <string name="quiz_fragment_label">Quiz Fragment</string>
    <string name="quiz_end_fragment_label">Quiz End Fragment</string>

    <!-- Home -->
    <string name="price">10</string>

    <string name="quizTitle">Loading…</string>
    <string name="goOnline">Go online for more</string>

    <string name="coins">0</string>

    <string name="purchaseMsg">Do you want to buy this quiz for %1$s coins?</string>
    <string name="purchaseNotEnough">You don\'t have enough coins to buy this.</string>

    <!-- Get ready -->
    <string name="getReady">Get ready!</string>

    <!-- Quiz -->
    <string name="currentQuestion">.........</string>

    <string name="question">Question?</string>
    <string name="answer0">0</string>
    <string name="answer1">1</string>
    <string name="answer2">2</string>
    <string name="answer3">3</string>

    <string name="tapToContinue">&#8594; Tap to continue &#8592;</string>

    <!-- Quiz End -->
    <string name="results">Results</string>

    <string name="scoreTitle">Score</string>
    <string name="score">+%1$s</string>

    <string name="returnHome">Return home</string>

    <!-- Stats -->
    <string name="stats">Stats</string>

    <string name="accuracyTitle">Accuracy</string>
    <string name="accuracy">0%</string>

    <string name="gamesTitle">Games</string>
    <string name="games">0</string>

    <string name="correctTitle">Correct</string>
    <string name="correct">0</string>

    <string name="incorrectTitle">Incorrect</string>
    <string name="incorrect">0</string>

    <!-- Menu -->
    <string name="about">About</string>
    <string name="aboutMsg">App developed by Victor Bergene for \"Approjekt 1\" at ITHS Stockholm.\n\nVersion: 1.0 (1)</string>
    <string name="licenses">Licenses</string>
    <string name="theme">Dark theme</string>
    <string name="exit">Exit</string>

    <!-- About -->
    <string name="sourceCode">Source code</string>
    <string name="moreApps">More apps</string>

    <!-- License -->
    <string name="licenseTitle">Title</string>
    <string name="licenseBy">By</string>
    <string name="licenseLicense">License</string>
    <string name="licenseLink">Link</string>

    <!-- Buttons -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>

</resources>