<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/nav_graph"
    app:startDestination="@id/SplashFragment">

    <fragment
        android:id="@+id/SplashFragment"
        android:name="com.walmin.android.quizmenow.SplashFragment"
        android:label="@string/splash_fragment_label"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/splashToHome"
            app:destination="@id/HomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.walmin.android.quizmenow.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/homeToGetReady"
            app:destination="@id/GetReadyFragment" />

        <action
            android:id="@+id/homeToStats"
            app:destination="@id/StatsFragment" />
    </fragment>

    <fragment
        android:id="@+id/StatsFragment"
        android:name="com.walmin.android.quizmenow.StatsFragment"
        android:label="@string/stats_fragment_label"
        tools:layout="@layout/fragment_stats">

        <action
            android:id="@+id/statsToHome"
            app:destination="@id/HomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/GetReadyFragment"
        android:name="com.walmin.android.quizmenow.GetReadyFragment"
        android:label="@string/get_ready_fragment_label"
        tools:layout="@layout/fragment_get_ready">

        <action
            android:id="@+id/getReadyToQuiz"
            app:destination="@id/QuizFragment" />
    </fragment>

    <fragment
        android:id="@+id/QuizFragment"
        android:name="com.walmin.android.quizmenow.QuizFragment"
        android:label="@string/quiz_fragment_label"
        tools:layout="@layout/fragment_quiz">

        <action
            android:id="@+id/quizToGetReady"
            app:destination="@id/GetReadyFragment" />

        <action
            android:id="@+id/quizToQuizEnd"
            app:destination="@id/QuizEndFragment" />
    </fragment>

    <fragment
        android:id="@+id/QuizEndFragment"
        android:name="com.walmin.android.quizmenow.QuizEndFragment"
        android:label="@string/quiz_end_fragment_label"
        tools:layout="@layout/fragment_quiz_end">

        <action
            android:id="@+id/quizEndToGetReady"
            app:destination="@id/GetReadyFragment" />

        <action
            android:id="@+id/quizEndToHome"
            app:destination="@id/HomeFragment" />
    </fragment>

</navigation>