<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="3dp"
    android:paddingBottom="3dp"
    android:paddingStart="22dp"
    android:paddingEnd="22dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/licenseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/licenseTitle"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/licenseBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/licenseBy"
        android:textColor="@color/text"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/licenseTitle" />

    <TextView
        android:id="@+id/licenseLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/licenseLicense"
        android:textColor="@color/textSecondary"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/licenseBy" />

    <TextView
        android:id="@+id/licenseLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/licenseLink"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/licenseLicense" />

</androidx.constraintlayout.widget.ConstraintLayout>