<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:text="@string/stats"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/titleView"
        app:layout_constraintBottom_toTopOf="@id/closeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/accuracyTitle"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/accuracyCircleView"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="160dp"
                android:minWidth="160dp"
                android:maxWidth="160dp"
                android:layout_height="160dp"
                android:minHeight="160dp"
                android:maxHeight="160dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:max="100"
                android:progress="0"
                android:background="@drawable/accuracy_bg"
                android:progressDrawable="@drawable/accuracy_progress" />

            <TextView
                android:id="@+id/accuracyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:text="@string/accuracy"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="32sp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/correctTitle"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/correctView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/correct"
            android:textColor="@color/colorAccent"
            android:textStyle="normal"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/incorrectTitle"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/incorrectView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/incorrect"
            android:textColor="@color/colorAccent"
            android:textStyle="normal"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gamesTitle"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/gamesView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/games"
            android:textColor="@color/colorAccent"
            android:textStyle="normal"
            android:textSize="24sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/closeBtn"
        android:layout_width="48dp"
        android:minWidth="48dp"
        android:maxWidth="48dp"
        android:layout_height="48dp"
        android:minHeight="48dp"
        android:maxHeight="48dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:contentPadding="4dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@drawable/home"
            app:tint="@color/colorPrimaryDark" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>