<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/returnHomeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ProgressBar
                android:id="@+id/accuracyCircleView"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="158dp"
                android:minWidth="158dp"
                android:maxWidth="158dp"
                android:layout_height="158dp"
                android:minHeight="158dp"
                android:maxHeight="158dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:max="10"
                android:progress="8"
                android:background="@drawable/accuracy_bg"
                android:progressDrawable="@drawable/accuracy_progress" />

            <TextView
                android:id="@+id/accuracyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:text="@string/accuracy"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="32sp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/scoreTitle"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/scoreView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="@color/colorAccent"
            android:textStyle="normal"
            android:textSize="32sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/returnHomeBtn"
        android:layout_width="256dp"
        android:minWidth="256dp"
        android:maxWidth="256dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/returnHome"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp"
        app:contentPadding="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            android:text="@string/returnHome"
            android:textAllCaps="true"
            android:textColor="@color/textDark"
            android:textSize="22sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>