<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <TextView
        android:id="@+id/currentQuestionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/questionCard"
        android:gravity="center"
        android:text="@string/currentQuestion"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/questionCard"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:minHeight="256dp"
        android:maxHeight="256dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/answerLayout"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="4dp"
        app:cardElevation="6dp"
        app:contentPadding="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp">

            <ImageView
                android:id="@+id/questionImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:adjustViewBounds="false"
                android:src="@null"
                android:contentDescription="@null" />

            <RelativeLayout
                android:id="@+id/quizQuestionLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/questionView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:text="@string/question"
                    android:textAllCaps="true"
                    android:textColor="@color/text"
                    android:textSize="32sp" />

            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/answerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/questionCard"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/answer0Card"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:minHeight="128dp"
                android:maxHeight="128dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                app:contentPadding="6dp">

                <TextView
                    android:id="@+id/answer0View"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:text="@string/answer0"
                    android:textAllCaps="true"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/answer2Card"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:minHeight="128dp"
                android:maxHeight="128dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                app:contentPadding="6dp">

                <TextView
                    android:id="@+id/answer2View"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:text="@string/answer2"
                    android:textAllCaps="true"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/answer1Card"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:minHeight="128dp"
                android:maxHeight="128dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                app:contentPadding="6dp">

                <TextView
                    android:id="@+id/answer1View"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:text="@string/answer1"
                    android:textAllCaps="true"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/answer3Card"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:minHeight="128dp"
                android:maxHeight="128dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="4dp"
                app:cardElevation="6dp"
                app:contentPadding="6dp">

                <TextView
                    android:id="@+id/answer3View"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:text="@string/answer3"
                    android:textAllCaps="true"
                    android:textColor="@color/text"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/gameTimerView"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:minHeight="16dp"
        android:maxHeight="16dp"
        android:elevation="2dp"
        android:progress="70"
        app:layout_constraintBottom_toBottomOf="parent"
        android:progressDrawable="@drawable/game_timer_progress" />

</androidx.constraintlayout.widget.ConstraintLayout>